<?xml version="1.0"?>
<package>
  <name>pedsim_simulator</name>
  <version>0.1.1</version>
  <description>
    Pedestrian Simulator: a social force model based simulation of pedestrians and their activities including, walking, grouping, etc
  </description>

  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>
  <author email="omar@email.todo">Omar Islas</author>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <maintainer email="omar@email.todo">Omar Islas</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/srl-freiburg/pedsim_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pedsim</build_depend>
  <build_depend>pedsim_msgs</build_depend>
  <build_depend>pedsim_srvs</build_depend>
  <build_depend>pedsim_utils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pedsim</run_depend>
  <run_depend>pedsim_msgs</run_depend>
  <run_depend>pedsim_srvs</run_depend>
  <run_depend>pedsim_utils</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
