<?xml version="1.0"?>
<package>
  <name>pedsim_srvs</name>
  <version>0.0.1</version>
  <description>The pedsim_srvs package</description>

  <maintainer email="okal@cs.uni-freiburg.de">batman</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pedsim_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>pedsim_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


 
</package>