<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pedsim_tf2</name>
  <version>0.0.1</version>
  
  <description>Package to publish pedsim info into tf tree</description>

  <maintainer email="jonatan.gines@urjc.es">jginesclavero</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pedsim_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
