<?xml version="1.0"?>
<package format="2">
  <name>pedsim_utils</name>
  <version>0.1.0</version>
  <description>
    Common utilities used in the pedestrian simulator collection of packages
  </description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pedsim_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>pedsim_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pedsim_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>eigen</exec_depend>

</package>
