<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pedsim_utils</name>
  <version>0.1.0</version>
  <description>
    Common utilities used in the pedestrian simulator collection of packages
  </description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>

  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
