<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pedsim_visualizer</name>
  <version>0.1.0</version>
  <description>The pedsim_visualizer package</description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pedsim_msgs</depend>
  <depend>pedsim_utils</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>spencer_tracking_msgs</depend>

  <!--<depend>dynamic_reconfigure</depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
