<?xml version="1.0"?>
<package>
  <name>pedsim_point_clouds</name>
  <version>0.1.1</version>
  <description>
    The pedsim_point_clouds package transforms the published obstacles (both walls and people) from pedsim into point_clouds which can then be used for planning using costmaps
  </description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <license>BSD</license>
  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
