<package>
  <name>animated_marker_msgs</name>
  <version>0.1.0</version>
  <description>
    Animated mesh markers
  </description>
  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/animated_marker_msgs</url>
  <author email="linder@cs.uni-freiburg.de">Timm Linder</author>
  <author email="jfaust@willowgarage.com">Josh Faust</author>
  <author email="dgossow@willowgarage.com">Davis Gossow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
